cert-manager/istio-yamls/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ramki-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # ingressgateway  use istio default controller
  servers:
  
  - port:
      number: 80
      name: gw-http
      protocol: HTTP
    hosts:
    - '*'
