cert-manager/istio-yamls/s3-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: s3-virtual-service
  namespace: istio-system
spec:
  hosts:
  - s3.ramkitech.com
  gateways:
  - ramki-gateway
  http:
  - route:
    - destination:
        host: rook-ceph-rgw-my-store.rook-ceph.svc.cluster.local
        port:
            number: 80
    timeout: 30s
